# youtube-analytics-project

./: pyproject.toml
helper/: youtube_api_manual.py
homework-2/: moscowpython.json
src/: channel.py  playlist.py  video.py
