[tool.poetry]
name = "poetry install"
version = "0.1.0"
description = ""
authors = ["Serious <sanekzh01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
google-api-python-client = "^2.95.0"
isodate = "^0.6.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
